# SLD-Vectorization

./: .gitignore  README.md  benchmark.md  build.sh  pyproject.toml
src/SLDvec/: __init__.py  constant.py  run.py
src/SLDvec/assets/: README.md
src/SLDvec/curve/: __init__.py  bezier.py  spline.py
src/SLDvec/fitting/: __init__.py  b_spline_to_bezier.py  filter.py  fit.py  stability_point_addition.py
src/SLDvec/ordering/: __init__.py  endpoint.py
src/SLDvec/ordering/intersection/: __init__.py  classification.py  extraction.py
src/SLDvec/ordering/traversal/: __init__.py  neighbor_order.py  travel.py  traverse.py
src/SLDvec/preprocessing/: __init__.py  image.py  vectorize.py
src/SLDvec/skeleton/: __init__.py  medial_axis.py  simplification.py  vanishing_angle.py
src/SLDvec/skeleton/medial_axis_cpp/: CMakeLists.txt  compile.sh  connected_component.h  utils.h  voronoi_pruning.cpp  winding_number.h
src/SLDvec/skeleton/vanishing_angle_cpp/: CMakeLists.txt  algorithm.cpp  algorithm.h  compile.sh  dynamic_tree.cpp  dynamic_tree.h  dynamic_tree_edge.cpp  dynamic_tree_edge.h  dynamic_tree_node.cpp  dynamic_tree_node.h  node.cpp  node.h  node_path_graph.cpp  node_path_graph.h  path.h  vanishing_angle.cpp
src/SLDvec/utils/: svg.py
src/SLDvec/utils/networkx/: __init__.py  api.py  branch.py  merge.py  path.py  t_intersection.py  tangent.py  y_intersection.py
src/SLDvec_app/: main.py
src/SLDvec_app/static/css/: reset.css  style.css  variable.css
src/SLDvec_app/static/css/component/: checkbox.css  radio.css  range.css
src/SLDvec_app/static/js/: App.js  CanvasInteraction.js  Colors.js  ControlState.js  EventHandler.js  Image.js  State.js
src/SLDvec_app/static/js/renderer/: CurveRenderer.js  GraphRenderer.js  Shader.js
src/SLDvec_app/templates/: index.html
src/SLDvec_cli/: cli.py
